--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ def getVersionCode = { ->
     try {
         def stdout = new ByteArrayOutputStream()
         exec {
-            commandLine 'git', 'rev-list', '--first-parent', '--count', 'master'
+            commandLine 'git', 'rev-list', '--first-parent', '--count', 'main'
             standardOutput = stdout
         }
         return Integer.parseInt(stdout.toString().trim())
