--- a/build.gradle
+++ b/build.gradle
@@ -221,6 +221,7 @@ dependencies {
 
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.autofill:autofill:1.1.0'
+    implementation files('libs/glyph-developer-sdk.jar')
 
     stableImplementation 'ch.acra:acra-mail:5.11.1'
     stableImplementation 'ch.acra:acra-dialog:5.11.1'
