--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -27,6 +27,8 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE"/>
 
+    <uses-permission android:name="com.nothing.ketchum.permission.ENABLE"/>
+
     <application android:label="@string/english_ime_name"
          android:icon="@mipmap/ic_launcher"
          android:roundIcon="@mipmap/ic_launcher_round"
@@ -46,6 +48,7 @@
             </intent-filter>
             <meta-data android:name="android.view.im"
                  android:resource="@xml/method"/>
+            <meta-data android:name="NothingKey" android:value="test"/>
         </service>
 
         <!--
