--- a/voiceinput-shared/build.gradle
+++ b/voiceinput-shared/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2024.02.02')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
+    implementation 'androidx.compose.ui:ui-tooling'
     implementation 'androidx.compose.material3:material3'
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
