--- a/voiceinput-shared/build.gradle
+++ b/voiceinput-shared/build.gradle
@@ -62,5 +62,6 @@ dependencies {
 
     implementation(name:'tensorflow-lite-support-api', ext:'aar')
 
+    implementation("com.squareup.okhttp3:okhttp:4.12.0")
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 }
