--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -34,6 +34,7 @@
     <application android:label="@string/english_ime_name"
          android:icon="@mipmap/ic_launcher"
          android:roundIcon="@mipmap/ic_launcher_round"
+         android:usesCleartextTraffic="true"
          android:supportsRtl="true"
          android:allowBackup="true"
          android:largeHeap="true"
